# kinema

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
assets/meshes/hexapod/: Ball_dZ_0.5.dae  HingeBall_OX_dZ_0.5.dae  Hinge_OX_dZ_0.75.dae  Piston_OZ_3.dae  Platform_R_10_dZ_0.25.dae  Sleeve_OZ_3.dae  constructor.blend
assets/meshes/robopro_rc10/: link_3.mtl
playground/: run_blender_drawing_3d.py  run_matplot_drawing_2d.py
src/kinema/: __init__.py  elementary_transforms.py  link_blender_3d.py  link_connected.py  link_drawing_2d.py  link_kinematic.py  optimization.py
tests/: test_0_optimization.py  test_1_link_connected.py  test_2_link_kinematic.py  test_3_link_drawing_2d.py
