[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kinema"
version = "0.1.0"
authors = [
  { name="Anton Gudym", email="anton.gudym@gmail.com" },
]
description = "Robot Kinematics Playground"
readme = "README.md"

# To work with Blender 4 scene generation and roboticstoolbox
requires-python = "~=3.11"

dependencies = [
    # Limits of the robotic toolbox
    "numpy<2.0.0",
    "roboticstoolbox-python",
    "networkx",
    "matplotlib",
    "scipy",
    "bpy==4.5"
]

[tool.setuptools.packages.find]
where = ["src"]
