[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kinema"
version = "0.1.0"
authors = [
  { name="Anton Gudym", email="anton.gudym@gmail.com" },
]
description = "Robot Kinematics Playground"
readme = "README.md"

# To work with Blender (BPY)
requires-python = "~=3.11"

dependencies = [
    # To work with Blender (BPY)
    "numpy<2",
    "bpy==4.5",
    "jax",
    "jaxlib",
    "networkx",
    "matplotlib",
    "scipy",
    "tqdm"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:faulthandler"
